[package]
name = "rfs_tester"
version = "1.2.0"
authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
edition = "2021"
repository = "https://github.com/greyshaman/rfs_tester"
homepage = "https://github.com/greyshaman/rfs_tester"
keywords = ["test", "file", "directory", "sandbox"]
categories = ["filesystem", "development-tools::testing"]
readme = "README.md"
license = "MIT"
description = """
This package allows you to create a temporary directory for testing purposes.
You can use it to perform tests related to file operations.
After the tests are finished, the temporary directory will be deleted automatically.
"""

[dependencies]
rfs_test_macro = "1.1.3"
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9.34"
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
walkdir = "2.5.0"

[build-dependencies]
cargo_metadata = "0.23.1"
